PointsBoard/points/static/points/styles/board.css
/* Rules specific to board.html */

#owner_controls {
	float: right;
	margin: 0 0 2em 2em;
}

#owner_controls input[type="submit"] {
	width: 10em;
}

#boardcontainer {
	width: 100%;
	overflow-x: scroll;
	clear: both;
}

#board tr {
	max-height: 15px;
}

#board,
#board td,
#board th,
#board caption {
	border-collapse: collapse;
	border: 1px solid #333;
	background: #CCC;
}

#board > tbody > tr:nth-child(2n) {
	background-color: #eee;
}

#board td {
	text-align: center;
	cursor: pointer;
}

#board td:hover {
	background-color: #669966;
}

#board td:nth-child(2n) {
	color: #555;
}

#board .username {
	min-width: 7em;
}

#board .points {
	min-width: 3em;
}

#transactioncontainer {
	margin-top: 2em;
	border: 1px solid #333;
	border-width: 0 1px;
}

#newtransaction {
	background-color: #CCC;
	padding: 1em;
	margin: 1em 2em;
	border: 1px solid #333;
	text-align: center;
}

#newtransaction input[name="reason"] {
	width: 20em;
}

.transactionSubmit {
	height: 25px;
	box-shadow:inset 0px 1px 0px 0px #caefab;
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #77d42a), color-stop(1, #5cb811) );
	background:-moz-linear-gradient( center top, #77d42a 5%, #5cb811 100% );
	background-color:#77d42a;
	border-radius:6px;
	border:1px solid #268a16;
	color:#306108;
	font-weight:bold;
	text-shadow:1px 1px 0px #aade7c;
}.transactionSubmit:hover {
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #5cb811), color-stop(1, #77d42a) );
	background:-moz-linear-gradient( center top, #5cb811 5%, #77d42a 100% );
	background-color:#5cb811;
}.transactionSubmit:active {
	position:relative;
	top:1px;
}

